--- a/css/style.css
+++ b/css/style.css
@@ -1,45 +1,394 @@
-body{
-  background-color: #f5f5f5;
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: 'Josefin Sans', sans-serif;
+  text-decoration: none;
+}   
+.main-width{
+  width: 1280px;
+  max-width: 95%;
+  margin: 0 auto;
+  padding: 0px 20px;
 }
-.jumbotron {
+.hero{
+  width: 100%;
+  height: 100%;
+  min-height: 100vh;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.692),rgba(0, 0, 0, 0.692)), url(/img/bg2.jpeg);
+  background-size: cover;
+  background-position: center;
+  padding-top: 1px;
+  
+}
+header{
+  padding: 40px 0 30px;
+  display: flex;
+  flex-wrap: nowrap;
+  align-items: center;
+  justify-content: space-between;
+}
+.logo i{
+  height: 55px;
+  width: 55px;
+  background: transparent;
+  border: 2px solid #2ecc71;
+  color: #2ecc71;
+  border-radius: 50%;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  cursor: pointer;
+}
+nav .hamb{
+  width: 35px;
+  height: 24px;
+  right: 3%;
+  top: 60px;
+  z-index: 5;
+  background: transparent;
+  position: absolute;
+  cursor: pointer;
+  display: none;
+}
+nav .hamb span{
+  display: block;
+  background: #2ecc71;
+  width: 100%;
+  height: 3px;
+  transition: .3s;
+  transition-property: transform,opacity;
+}
+nav .hamb span:nth-child(2){
+  margin: 7px 0px;
+}
+nav .nav-list{
+  list-style: none;
+
+}
+nav .nav-list li{
+  display: inline-block;
+
+}
+nav .nav-list li a{
+  display: inline-block;
+  color: #eee;
+  margin-left: 55px;
+  font-size: 15px;
+  font-weight: 600;
+
+}
+nav .nav-list li:not(:last-child) a:hover{
+  color: #2ecc71;
+  transition: .4s;
+}
+nav .nav-list li.btn a{
+  display: inline-block;
+  background: transparent;
+  border: 2px solid #2ecc71;
+  padding: 9px 28px;
+  border-radius: 30px;
+  line-height: 1.3;
+  color: #2ecc71;
+  font-weight: 500;
+}
+nav .nav-list li.btn:hover a{
+  background: #2ecc71;
   color: white;
-  padding-top: 6rem;
-  background-color: #18181B;
+  border: 2px solid transparent;
+  transition: .4s;
 }
-.jumbotron p{
-  margin: 25px;
+.container .hero-text{
+  margin-bottom: 40px;
 }
-card{
-  margin-bottom: 50px;
+.container .hero-text h1{
+  color: white;
+  font-weight: 900;
+  line-height: 1.2;
+  margin: 30px 0px 30px;
 }
+span{
+  color: #2ecc71;
+
+}
+.container .hero-text h3{
+  color: #eee;
+  font-weight: 400;
+  font-size: 17px;
+  margin-top: 200px;
+}
+.container .hero-text p{
+  width: 440px;
+  max-width: 100%;
+  color: #eee;
+  font-size: 15px;
+  line-height: 1.5;
+  margin-bottom: 30px;
+}
+.social a{
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 17px;
+  color: #eee;
+  cursor: pointer;
+  margin-right: 16px;
+  margin-left:auto ;
+  background-color: rgb(255,255,255,0.1);
+  margin-bottom: 120px;
+}
+.social a:hover{
+  transform: scale(1.1);
+  background: #2ecc71;
+  transition: .4s;
+}
+/*.container .hero-text button{
+  color: #eee;
+  background: #2ecc71;
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 24px;
+  padding: 8px 30px;
+  border: 2px solid #2ecc71;
+  border-radius: 30px;
+  cursor: pointer;
+}
+.container .hero-text button:hover{
+  background: transparent;
+  border: 2px solid #2ecc71;
+  color: #2ecc71;
+  transition: .4s;
+}*/
+.bottom{
+  margin-top: 155px;
+  padding-bottom: 25px;
+
+}
+.bottom p{
+  color: #eee;
+  letter-spacing: 2px;
+  font-size: 12px;
+}
+
+@media screen and (max-width: 930px) {
+  nav .hamb{
+      display: initial;
+  }
+  .click{
+      top: 46px;
+  }
+  .click span{
+      position: absolute;
+      margin-top: 12px;  
+  }
+  .click span:first-child{
+      transform: rotate(-40deg);
+  }
+  .click span:nth-child(2){
+      opacity: 0;
+      margin: 0;
+  }
+  .click span:last-child{
+      transform: rotate(40deg);
+      top: 0;
+  }
+  nav .nav-list{
+      position: absolute;
+      top: 90px;
+      right: -65%;
+      bottom: 0;
+      width: 60%;
+      height: 400px;
+      background: black;
+      z-index: 2;
+      padding: 6% 9%;
+      transition: .3s right;
+      border-radius: 10px;
+  }
+  nav .nav-list li{
+      display: block;
+  }
+  nav .nav-list li a{
+      display: block;
+      text-align: center;
+      font-size: 18px;
+      font-weight: 400;
+      margin-left: 0;
+      margin-bottom: 50px;
+  }
+  nav .nav-list li.btn a{
+      position: absolute;
+      bottom: 0;
+      right: 20%;
+      left: 20%;
+      padding: 7px 15px;
+      font-size: 14px;
+  }
+  nav .nav-list.open{
+      right: 0;
+  }
+}
+.about{
+  width: 100%;
+  padding: 100px 0px;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.897),rgba(0, 0, 0, 0.897)), url(/img/bg.png);
+  background-size: cover;
+  background-position: center;
+}
+.about img{
+  height: auto;
+  width: 380px;
+}
+.about-text{
+  width: 550px;
+}  
+.main{
+  width: 1130px;
+  max-width: 95%;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+.about-text h2{
+  color: white;
+  font-size: 75px;
+  text-transform: capitalize;
+  margin-bottom: 20px;
+}
+.about-text h5{
+  color: white;
+  font-size: 22px;
+  text-transform: capitalize;
+  margin-bottom: 25px;
+  letter-spacing: 2px;
+}
+
+.about-text p{
+  color: #eee;
+  letter-spacing: 1px;
+  line-height: 28px;
+  font-size: 18px;
+  margin-bottom: 45px;
+}
+.portfolio{
+  background: #101010;
+  width: 100%;
+  padding: 100px 0px;
+}
+.title h2{
+  color: white;
+  font-size: 75px;
+  width: 1130px;
+  margin: 30px auto;
+  text-align: center;
+}
+.box1{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 400px;
+}
+.card1{
+  height: 365px;
+  width: 335px;
+  padding: 20px 35px;
+  background: #191919;
+  border-radius: 20px;
+  margin: 15px;
+  position: relative;
+  overflow: hidden;
+  text-align: center;
+}
+.card1 i{
+  font-size: 50px;
+  display: block;
+  text-align: center;
+  margin: 25px 0px;
+  color: #2ecc71;
+}
+.card1 h5{
+  color: #eee;
+  font-size: 23px;
+  margin-bottom: 15px;
+}
+.pra p{
+  color: #eee;
+  font-size: 16px;
+  margin-bottom: 25px;
+  line-height: 27px;
+}
+.card1 .button{
+  background-color: #f9004d;
+  color: white;
+  text-decoration: none;
+  border: 2px solid transparent;
+  font-weight: bold;
+  padding: 9px 22px;
+  border-radius: 30px;
+  transition: .4s;
+}
+.card1 .button:hover{
+  background: transparent;
+  border: 2px solid #f9004d;
+  cursor: pointer;
+}
+footer{
+  color: white;
+  background: #18181B;
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+footer p:nth-child(1){
+  font-size: 30px;
+  color: #eee;
+  margin-bottom: 20px;
+  font-weight: bold;
+}
+footer p:nth-child(2){
+  color: white;
+  font-size: 17px;
+  width: 500px;
+  text-align: center;
+  line-height: 26px;
+}
+.social2{
+  display: flex;
+}
+.social2 a{
+  width: 35px;
+  height: 35px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: rgb(255,255,255,0.1);
+  border-radius: 50%;
+  margin: 22px 10px;
+  color: #eee;
+  text-decoration: none;
+  font-size: 20px;
+}
+.social2 a:hover{
+  transform: scale(1.3);
+  transition: .4s;
+}
+
 .container1  {
   color: white;
   background: #18181B;
   display: flex;
   width: 100%;
-  height: 90%;
   align-items: center;
   justify-content: center;
+  position: absolute;
 
-}
-form{
-  color: white;
-  background: #18181B;
-  display: flex;
-  flex-direction: column;
-  padding: 2vw 4vw;
-  width: 80%;
-  max-width: 600px;
-  border-radius: 3px;
-  margin-bottom: 80px;
-}
-
-form input, form textarea{
-  border: 0;
-  margin: 10px 0;
-  outline: none;
-  background: #f5f5f5;
-  font-size: 16px;
 }
 form button{
   padding: 15px;
@@ -52,51 +401,9 @@ form button{
   margin: 20px auto 0;
   border-radius: 20px;
 }
-.loader {
-  border-top-color: #ef4444;
-  -webkit-animation: spinner 1.5s linear infinite;
-  animation: spinner 1.5s linear infinite;
-}
-
-@-webkit-keyframes spinner {
-  0% {
-    -webkit-transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(360deg);
-  }
-}
-
-@keyframes spinner {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
-.path-0 {
-  animation: pathAnim-0 8s;
-  animation-timing-function: linear;
-  animation-iteration-count: infinite;
-}
-@keyframes pathAnim-0 {
-  0% {
-      d: path("M 0,400 C 0,400 0,200 0,200 C 41.57612529288447,176.54847700086324 83.15225058576894,153.0969540017265 141,148 C 198.84774941423106,142.9030459982735 272.9671229498088,156.16066099395735 335,173 C 397.0328770501912,189.83933900604265 446.9792576149956,210.2604020224442 490,217 C 533.0207423850044,223.7395979775558 569.1158465902084,216.7977309162659 620,232 C 670.8841534097916,247.2022690837341 736.5573560241708,284.5486743124923 799,265 C 861.4426439758292,245.45132568750768 920.654729313109,169.00757183376496 969,165 C 1017.345270686891,160.99242816623504 1054.8237267233937,229.4210383524479 1108,244 C 1161.1762732766063,258.5789616475521 1230.050363793316,219.30827475644347 1288,203 C 1345.949636206684,186.69172524355653 1392.974818103342,193.34586262177828 1440,200 C 1440,200 1440,400 1440,400 Z");
-  }
-  25% {
-      d: path("M 0,400 C 0,400 0,200 0,200 C 39.205870020964355,242.77094586262177 78.41174004192871,285.54189172524354 130,270 C 181.5882599580713,254.45810827475643 245.55890985324947,180.60337896164754 302,164 C 358.4410901467505,147.39662103835246 407.35262054507336,188.04459242816625 466,186 C 524.6473794549266,183.95540757183375 593.0306079664572,139.2182513256875 644,128 C 694.9693920335428,116.78174867431251 728.5249475890984,139.08240226908376 783,172 C 837.4750524109016,204.91759773091624 912.8696016771489,248.45213959797758 978,269 C 1043.130398322851,289.5478604020224 1097.996645702306,287.109039339006 1143,261 C 1188.003354297694,234.89096066099398 1223.1438155136268,185.11170304599827 1271,171 C 1318.8561844863732,156.88829695400173 1379.4280922431867,178.44414847700085 1440,200 C 1440,200 1440,400 1440,400 Z");
-  }
-  50% {
-      d: path("M 0,400 C 0,400 0,200 0,200 C 66.30075225058577,207.88092243186583 132.60150450117155,215.76184486373168 178,228 C 223.39849549882845,240.23815513626832 247.8947342458996,256.83354297693916 297,239 C 346.1052657541004,221.16645702306084 419.81955851523,168.90398322851155 479,159 C 538.18044148477,149.09601677148845 582.8270316931804,181.55052410901467 636,192 C 689.1729683068196,202.44947589098533 750.8723147120483,190.89392033542978 800,185 C 849.1276852879517,179.10607966457022 885.683709458626,178.87379454926622 932,197 C 978.316290541374,215.12620545073378 1034.392847453447,251.61090146750524 1096,266 C 1157.607152546553,280.38909853249476 1224.7449007275866,272.6825995807128 1283,258 C 1341.2550992724134,243.31740041928722 1390.6275496362068,221.6587002096436 1440,200 C 1440,200 1440,400 1440,400 Z");
-  }
-  75% {
-      d: path("M 0,400 C 0,400 0,200 0,200 C 41.75020347761746,217.6812923911703 83.50040695523492,235.36258478234063 132,232 C 180.49959304476508,228.63741521765937 235.74857565667776,204.23095326180785 291,185 C 346.25142434332224,165.76904673819215 401.505290418054,151.71360217042792 455,136 C 508.494709581946,120.28639782957208 560.2302626711062,102.91463805648047 615,132 C 669.7697373288938,161.08536194351953 727.5736588975212,236.62784560365026 791,248 C 854.4263411024788,259.37215439634974 923.4751017388089,206.5739795289185 985,167 C 1046.524898261191,127.4260204710815 1100.5259341472438,101.0762362806758 1146,130 C 1191.4740658527562,158.9237637193242 1228.4211616722162,243.12107534837833 1276,264 C 1323.5788383277838,284.8789246516217 1381.789419163892,242.43946232581084 1440,200 C 1440,200 1440,400 1440,400 Z");
-  }
-  100% {
-      d: path("M 0,400 C 0,400 0,200 0,200 C 41.57612529288447,176.54847700086324 83.15225058576894,153.0969540017265 141,148 C 198.84774941423106,142.9030459982735 272.9671229498088,156.16066099395735 335,173 C 397.0328770501912,189.83933900604265 446.9792576149956,210.2604020224442 490,217 C 533.0207423850044,223.7395979775558 569.1158465902084,216.7977309162659 620,232 C 670.8841534097916,247.2022690837341 736.5573560241708,284.5486743124923 799,265 C 861.4426439758292,245.45132568750768 920.654729313109,169.00757183376496 969,165 C 1017.345270686891,160.99242816623504 1054.8237267233937,229.4210383524479 1108,244 C 1161.1762732766063,258.5789616475521 1230.050363793316,219.30827475644347 1288,203 C 1345.949636206684,186.69172524355653 1392.974818103342,193.34586262177828 1440,200 C 1440,200 1440,400 1440,400 Z");
-  }
-}
-aside{
-  width: 100%;
+form button:hover{
+  background: #2ecc71;
+  color: white;
+  border: 2px solid transparent;
+  transition: .4s;
 }
