--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
   width: 100%;
   height: auto;
   min-height: 100vh;
-  /*background-image: linear-gradient(rgba(0, 0, 0, 0.692),rgba(0, 0, 0, 0.692)), url(/img/bg2.jpeg);*/
+  background-image: linear-gradient(rgba(0, 0, 0, 0.692),rgba(0, 0, 0, 0.692)), url(/img/bg2.jpeg);
   background: #000000;
   background-size: cover;
   background-position: center;
